 to 200 (requested by Mike Charlton).
-don't count inactive cards in the grade distribution in the statistics
 window (reported by Joonatan Kaartinen).
-removed a few rarely used options from the configuration dialog and
 placed them in .mnemosyne/config.py, a new file which can be used to
 set these and other rarely used options.
-improve tooltips.
-new logo, thanks to a contributor whose name sadly got lost in the 
 demise of the open-collab site.
-new icons, based on the Crystal iconset.
-added support for Unicode filenames.
-implemented a basic plugin system. The directory .mnemosyne/plugins
 can contain python scripts which will be executed at run time and
 which can be used to customise Mnemosyne or add new features.
-don't exit when final save failed (requested by lebowski_404).
-added more supported sound and picture formats.
-fixed 'Save as' option.

	
MNEMOSYNE 0.9.10 : 2007-10-28

-added 3-sided cards, to make dealing with vocabulary in foreign scripts 
 easier. Right clicking the text field in 'add cards' gives you to option
 to switch to 3-sided card input, which replaces the question and answer
 fields by 3 fields: written form, pronunciation, translation. After 
 selecting an initial grade, 2 cards will be added:

  Q: written form
  A: pronunciation
     translation

 and

  Q: translation
  A: written form
     pronunciation  

-when creating multiple cards from the same data (either through add vice
 versa or the 3-sided input), the relationship between these cards is now
 stored. In a future version, this will make it possible that editing one 
 card of the set automatically updates the other ones.
-added feature to insert an image or a sound tag by using a file selector. 
 Accessed through popup-menu or keyboard shortcuts.
-remember more settings across invocations: file formats and directories,
 reset learning data, column width and sorting order, ...
-rationalised keyboard shortcuts and menus. Added list of keyboard shortcuts
 to the website.