@@ -8,8 +8,6 @@ Memosyne analysis:
 
 Mnemosyne 1.0:
 
--give more feedback on import failure, plugin failure
-
 -small version of Mnemosyne logo, add logo to about and getting started
 
 -tooltip for 'grade 0 limit'
@@ -97,11 +95,9 @@ Mnemosyne 1.2:
 
 -consistent editing of vice versa and three-sided cards
 
--three sided tsv inport
-
 -option to type right answer
 
--remove 'check duplicates when adding' option
+-remove 'check duplicates when adding' option?
 
 
 
